feat: wip convertsion of FlowNodeInstanceReader to java client